# sc-mini

./: .gitignore  README.md  sc-mini.cabal
src/: Data.hs  DataIO.hs  DataUtil.hs  Deforester.hs  Demonstration.hs  Driving.hs  Folding.hs  Generator.hs  Interpreter.hs  NeighborhoodAnalysis.hs  Prototype.hs  TreeInterpreter.hs
